# api/contribution_conllections.swagger.json
@@ -163,6 +163,12 @@
         },
         "profile_scope": {
           "$ref": "#/definitions/prolab_accountsProfileScope"
+        },
+        "atcoder_user_name": {
+          "type": "string"
+        },
+        "display_name": {
+          "type": "string"
         }
       }
     }
